// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flags loaded flag 1`] = `
Object {
  "handlers": Object {
    "setUsers": [Function],
    "setUsersLoaded": [Function],
  },
  "users": Object {},
  "usersLoaded": false,
}
`;

exports[`Props Handling basic case 1`] = `
Object {
  "handlers": Object {
    "setUsers": [Function],
  },
  "users": undefined,
}
`;

exports[`Props Handling no props given 1`] = `
Object {
  "handlers": Object {},
}
`;

exports[`Props Handling normal case 1`] = `
Object {
  "handlers": Object {
    "setIsVisible": [Function],
    "setUsers": [Function],
    "setUsersLoaded": [Function],
    "toggleIsVisible": [Function],
  },
  "isVisible": false,
  "users": Object {},
  "usersLoaded": false,
}
`;

exports[`Use cases counter example 1`] = `
Object {
  "count": 1,
  "handlers": Object {
    "incrCount": [Function],
    "resetCount": [Function],
    "setCount": [Function],
  },
}
`;

exports[`Use cases toggle example 1`] = `
Object {
  "active": true,
  "handlers": Object {
    "setActive": [Function],
    "toggleActive": [Function],
  },
}
`;

exports[`Use cases with compound handlers example 1`] = `
Object {
  "countA": 0,
  "countB": 0,
  "handlers": Object {
    "setAll": [Function],
    "setCountA": [Function],
    "setCountB": [Function],
  },
}
`;
